src/index.css
/*
    GENERAL
*/
#root{
  min-height: 100%;
  position: relative;
  height:auto !important;
  height:100%;
}
html,body {
	margin:0;
	padding:0;
	height:100%;
}

body {
  background-color: #f5f5f5;
}

/*
    GALLERI
*/
.image-grid>div{
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}
.image {
  position: relative;
  margin: 0.5rem 0 1rem 0;
  background-color: #fff;
  border-radius: 2px;
  cursor: pointer;
  height: 400px;
  padding: 20px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
}
.image img {
  width: 320px;

}

.image-wrapper {
  height: 320px;
  background-image: url('https://dummyimage.com/320x320/f5f5f5/ffffff&text=laster...');
}

.image:hover {
  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}
.image .time{
  color: #888;
  position: absolute;
  bottom: 10px;
  right: 20px;
}

.images{
  padding-bottom: 70px;
}

.up-to-top {
  display: none;
  background-color: white;
  position: fixed;
  right: 0px;
  bottom: 60px;
  padding: 5px 30px 10px 10px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);

}
.up-to-top:hover {
  cursor: pointer;
  box-shadow: 0 5px 5px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}

/*
   LOADER
*/

.spinner {
  margin-top: 20px;
  display: block;
  margin-left: 48.5%;
}
.spinner > div {
  background-color: #AE2310 !important;
}

.hidden {
  display: none;
}


/*
    CAROUSEL
*/
.carousel-btn{
  background-color: rgba(0,0,0,0.5);
  border: none;
  padding: 15px;
}

.carousel-btn:focus{
  outline: none;
}

/*
    FOOTER
*/
footer{
  position:absolute;
  width: 100%;
  bottom: 0;
  padding: 10px;
  background-color: #FFF;
}
.footer-content{
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
}

.fa-github{
  margin-left: 10px;
  font-size: 1.5em;
}



/*
    CONTACT
*/
.contact {
  display: flex;
  justify-content: center;
}

.contact  h1 {
  font-size: 140%;
}


.contact > table {
  font-size: 1.5em;
}

.contact > table  td {
  padding: 20px;
  padding-top: 0px;
}



/*
      NAVBAR
*/
.icon-bar{
  background-color: #AE2310 !important;
}
.navbar {
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   -webkit-backface-visibility: hidden;
}

.navbar  a {
  font-size: 150%;
  height: 70px;
  margin-top: 20px;
  margin-bottom: -10px;
}

.navbar a:hover {
  color: #AE2310 !important;
}

.active {
  border-bottom: 2px solid #AE2310;
}
.active > a {
  color: #AE2310 !important;
}

.logo {
  margin: 5px;
  height: 30px;
}

/*
      HOME PAGE
*/
.home-text {
  margin-left: 5px;
  margin-right: 5px;
  padding-bottom: 70px;
}

.home-text > h1 {
  font-size: 400%;
}

.home-text > h2 {
  margin-top: -30px;
}

.home-text > p {
  margin-top: 30px;
  font-size: 110%;
}



/*
      MEDIA QUERIES
*/
@media (min-width: 768px) {
  .image-grid {
    margin-left: 10%;
    margin-right: 10%;
  }
  .home-text {
    margin-left: 25%;
    margin-right: 25%;
  }
  .logo {
    margin: 5px;
    height: 70px;
  }
  .contact > table {
    font-size: 2em;
  }
}

